# drone_autonomy_platform

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.agents.yaml  package.xml  pyproject.toml  setup_platform.sh
.claude/skills/architecture/: SKILL.md
.claude/skills/c4/: SKILL.md
.claude/skills/capability/: SKILL.md
.claude/skills/design/: SKILL.md
.claude/skills/report/: SKILL.md
.claude/skills/requirements/: SKILL.md
.claude/skills/test-plan/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: issue_triage.md  safety_review.md  test_generation.md
.github/workflows/: ci.yml
agents/: README.md  cli.py  requirements.txt
agents/deploy_worker/: Dockerfile  worker.py
agents/ml-worker/: worker.py
agents/ml_worker/: Dockerfile
agents/orchestrator/: Dockerfile  activities.py  worker.py  workflows.py
agents/ros2-worker/: Dockerfile
agents/ros2_worker/: worker.py
agents/shared/: __init__.py  llm_client.py  prompts.py  tools.py
agents/sim_scenarios/: basic_mission.py
agents/sim_worker/: Dockerfile  worker.py
agents/tests/: test_llm_client.py  test_plan_validation.py
docker/: Dockerfile.agents  Dockerfile.dev  Dockerfile.orin  docker-compose.yml
docker/local-agent/: Dockerfile  README.md  docker-compose.yml
docker/sim/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: oakd-setup.md  session-notes-2026-03-15.md
docs/agents/: issue_triage_context.md  test_generation_context.md
docs/architecture/: drone_hardware.md  latency_requirements.md  military_use_cases.md  perception_architecture.md  perception_finetuning_plan.md  px4_setup.md  telemetry.md
docs/architecture/c4/: README.md  level1_context.md  level1_context.puml  level2_container.md  level2_container.puml  level3_component_autonomy.md  level3_component_autonomy.puml  level3_component_communication.md  level3_component_communication.puml  level3_component_control.md  level3_component_control.puml  level3_component_mapping.md  level3_component_mapping.puml  level3_component_navigation.md  level3_component_navigation.puml  (+5 more)
docs/capabilities/: CAP-001-implementation-plan.md  CAP-001-photogrammetry.md  CAP-001-remaining-work.md  CAP-002-implementation-plan.md  CAP-002-premow-clearance.md
docs/design/: DES-001-topic-remap-wiring.md  DES-002-sensor-data-consumption.md  DES-003-survey-mission-coverage-trajectory.md  DES-004-survey-dataset-recording.md  DES-005-photogrammetry-pipeline.md  DES-006-fc-command-bridge.md  DES-007-clearance-sensing-and-model.md  DES-008-clearance-mission-and-confirmation.md  DES-009-tracker-node.md  DES-010-clearance-recorder.md  DES-011-clearance-report-and-delivery.md  README.md
docs/reports/: 2026-07-05-CAP-001-designer-review.md  gap_CAP-001.md  gap_CAP-002.md  traceability_matrix.md
docs/requirements/: README.md  platform_requirements.sdoc  stakeholder_requirements.sdoc
docs/standards/: do_178c_context.md
docs/test_plans/: TP-001-latency-and-safety.md  TP-002-survey-mapping.md  TP-003-premow-clearance.md
issues/: one-step-repo-initialization.md
launch/: README.md  platform.launch.py  platform_core.launch.py
launch/test/: test_platform_integration.py
msgs/: CMakeLists.txt  package.xml
msgs/ros2/: AttitudeCommand.msg  Mission.msg  MissionStatus.msg  SensorData.msg  TrackedObject.msg  TrackedObjectArray.msg  Trajectory.msg
scripts/: build_rfdetr_engine.sh  build_tensorrt_engine.sh  check_architecture_gap.py  check_traceability.py  export_rfdetr_onnx.py  export_rtdetr_onnx.sh  generate_c4.py  setup.sh  setup_c4_tooling.sh  smoke_test.sh  submit_task.py  task.sh
src/autonomy/: CMakeLists.txt  package.xml
src/autonomy/include/autonomy/: autonomy_node.hpp  survey_validation.hpp
src/autonomy/launch/: autonomy.launch.py
src/autonomy/src/: autonomy_node.cpp  main.cpp  survey_validation.cpp
src/autonomy/test/: test_survey_dispatch.cpp
src/common/: CMakeLists.txt  package.xml
src/communication/: CMakeLists.txt  package.xml
src/communication/launch/: communication.launch.py
src/communication/src/: communication_node.cpp
src/communication/test/: test_communication_node.cpp
src/control/: CMakeLists.txt  package.xml
src/control/launch/: control.launch.py
src/control/src/: control_node.cpp
src/control/test/: test_control_node.cpp
src/mapping/: CMakeLists.txt  package.xml
src/mapping/include/mapping/: dataset_writer.hpp
src/mapping/launch/: mapping.launch.py
src/mapping/src/: dataset_writer.cpp  survey_recorder_node.cpp
src/mapping/tests/: dataset_writer_test.cpp  test_survey_recorder_replay.py
src/mapping/tests/fixtures/: generate_f3_bag.py
src/mapping/tests/fixtures/f3_survey_replay/: f3_survey_replay_0.db3  metadata.yaml
src/mock_fcu/: CMakeLists.txt  package.xml
src/mock_fcu/launch/: mock_fcu.launch.py
src/mock_fcu/src/: mock_fcu_node.cpp
src/navigation/: CMakeLists.txt  package.xml
src/navigation/include/navigation/: survey_planner.hpp
src/navigation/launch/: navigation.launch.py
src/navigation/src/: navigation_node.cpp  survey_planner.cpp
src/navigation/test/: test_navigation_node.cpp
src/navigation/tests/: survey_planner_test.cpp
src/perception/: CMakeLists.txt  package.xml
src/perception/config/: rfdetr.yaml
src/perception/launch/: detection_viz.launch.py  full_stack.launch.py  oakd_full.launch.py  oakd_perception.launch.py  oakd_vslam_sensors.launch.py  perception.launch.py  perception_only.launch.py  rfdetr.launch.py  tracking.launch.py  vslam.launch.py  vslam_only.launch.py
src/perception/src/: detection_visualizer.py  multi_object_tracker.py  perception_node.cpp  rfdetr_____node.py  rfdetr_node.py
src/perception/test/: test_perception_node.cpp
src/safety/: CMakeLists.txt  package.xml
src/safety/launch/: safety.launch.py
src/safety/src/: battery_monitor.cpp  safety_node.cpp
src/safety/test/: test_battery_monitor.cpp  test_safety_node.cpp
test/fixtures/: reference_polygons.yaml
tools/photogrammetry/: Dockerfile  README.md  run_pipeline.py  verify_dataset.py
(+25 files in other folders)
