<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>communication</name>
  <version>0.1.0</version>
  <description>Communication node for the drone autonomy platform</description>
  <maintainer email="team@example.com">Drone Autonomy Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>mavros_msgs</depend>
  <depend>drone_autonomy_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
