<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapping</name>
  <version>0.1.0</version>
  <description>Survey dataset recording for the drone autonomy platform (CAP-001 / DES-004)</description>
  <maintainer email="ryanjmatthews+drone_autonomy@gmail.com">Ryan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>drone_autonomy_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <!-- TP-002 TS-05/TS-06 ROS-graph replay test (Verifies: MAP-2) -->
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>rosbag2_py</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
