<?xml version="1.0"?>
<package format="3">
  <name>mock_fcu</name>
  <version>0.1.0</version>
  <description>
    Mock flight controller (MAVROS interface) for integration testing.
    Replaces a real Pixhawk + MAVROS stack during unit and launch tests.
    NOT for deployment — test builds only.
  </description>
  <maintainer email="dev@drone">Drone Autonomy Platform</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
